# idle-mmorpg-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  start.sh
data/: classes.json  enemies.json  engine.json  items.json  quests.json  races.json
include/Character/: Character.h  CharacterFactory.h  Inventory.h  Stats.h
include/Combat/: CombatResult.h  CombatSystem.h  Enemy.h  EnemyFactory.h  EnemySpawner.h
include/Core/: DataManager.h  Game.h  GameMessage.h  GameState.h  GameStateManager.h  Logger.h  Version.h
include/Core/States/: MainMenuState.h
include/Data/: ClassDefinition.h  EnemyDefinition.h  ItemDefinition.h  QuestDefinition.h  RaceDefinition.h
include/Items/: Item.h  ItemFactory.h
include/UI/: ConsoleUI.h
scripts/: build.sh  clean.sh  run.sh
src/: main.cpp
src/Character/: Character.cpp  CharacterFactory.cpp  Inventory.cpp  Stats.cpp
src/Combat/: CombatSystem.cpp  Enemy.cpp  EnemyFactory.cpp  EnemySpawner.cpp
src/Core/: DataManager.cpp  Game.cpp  GameMessage.cpp  GameStateManager.cpp  Logger.cpp
src/Core/States/: MainMenuState.cpp
src/Items/: Item.cpp  ItemFactory.cpp
src/UI/: ConsoleUI.cpp
